--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-responsive-screen": "^1.4.0",
     "react-native-router-flux": "^4.2.0",
-    "react-native-screens": "^2.3.0"
+    "react-native-screens": "^2.3.0",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "7.8.7",
