--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "native-base": "^2.13.12",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.7.0",
     "react-native-responsive-screen": "^1.4.0",
     "react-native-router-flux": "^4.2.0",
