--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "native-base": "^2.13.12",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-drawer": "^2.5.1",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-linear-gradient": "^2.5.6",
@@ -20,7 +21,11 @@
     "react-native-responsive-screen": "^1.4.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.3.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-side-drawer": "^1.2.5",
+    "react-native-side-menu": "^1.1.3",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.3.3",
+    "react-navigation-drawer": "^2.4.7"
   },
   "devDependencies": {
     "@babel/core": "7.8.7",
