--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "native-base": "^2.13.12",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-drawer": "^2.5.1",
     "react-native-confirmation-code-field": "^5.1.0",
+    "react-native-drawer": "^2.5.1",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-loading-spinner-overlay": "^1.1.0",
+    "react-native-material-bottom-navigation": "^1.0.5",
     "react-native-reanimated": "^1.7.0",
     "react-native-responsive-screen": "^1.4.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.3.0",
+    "react-native-search-filter": "^0.1.5",
     "react-native-side-drawer": "^1.2.5",
     "react-native-side-menu": "^1.1.3",
     "react-native-vector-icons": "^6.6.0",
