--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "native-base": "^2.13.12",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-confirmation-code-field": "^5.1.0",
+    "react-native-confirmation-code-input": "^1.0.4",
     "react-native-drawer": "^2.5.1",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
