--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "native-base": "^2.13.12",
+    "qs": "^6.9.3",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-confirmation-code-field": "^5.1.0",
