--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-confirmation-code-input": "^1.0.4",
+    "react-native-document-picker": "^3.3.3",
     "react-native-drawer": "^2.5.1",
     "react-native-elements": "^1.2.7",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^1.1.0",
