--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.10.0",
     "axios": "^0.19.2",
     "native-base": "^2.13.12",
     "qs": "^6.9.3",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-confirmation-code-input": "^1.0.4",
+    "react-native-crypto-js": "^1.0.0",
     "react-native-document-picker": "^3.3.3",
     "react-native-drawer": "^2.5.1",
     "react-native-elements": "^1.2.7",
